--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,182 +1,183 @@
 {
-    "app.name": "ESG職FUN獎賞",
-    "language": {
-      "short": "中",
-      "en": "English",
-      "zh": "中文"
+  "app.name": "ESG職FUN獎賞",
+  "language": {
+    "short": "中",
+    "en": "English",
+    "zh": "中文"
+  },
+  "btn": {
+    "cancel": "Cancel",
+    "update": "Update",
+    "start": "Start",
+    "resend": "Resend",
+    "retry": "Resend in %s second(s)",
+    "next": "Next",
+    "goto_settings": "Goto Settings",
+    "transfer": "Transfer",
+    "notes": "Notes",
+    "done": "Done",
+    "view_more": "View More",
+    "check_in": "Check In",
+    "redeem": "Redeem",
+    "sold_out": "Out of Stock",
+    "ok": "OK",
+    "confirm": "Confirm",
+    "logout": "Logout"
+  },
+  "input": {
+    "mobile": {
+      "title": "Mobile",
+      "hint": "Mobile"
     },
-    "btn": {
-      "cancel": "Cancel",
-      "update": "Update",
-      "start": "Start",
-      "resend": "Resend",
-      "retry": "Resend in %s second(s)",
-      "next": "Next",
-      "goto_settings": "Goto Settings",
-      "transfer": "Transfer",
-      "notes": "Notes",
-      "done": "Done",
-      "view_more": "View More",
-      "check_in": "Check In",
-      "redeem": "Redeem",
-      "ok": "OK",
-      "confirm": "Confirm",
-      "logout": "Logout"
+    "id": {
+      "title": "Staff ID",
+      "hint": "Staff ID"
     },
-    "input": {
-      "mobile": {
-        "title": "Mobile",
-        "hint": "Mobile"
+    "name": {
+      "title": "Staff Name",
+      "hint": "Staff Name"
+    }
+  },
+  "login": {
+    "note": "Please enter your mobile number\nthen we will send OTP to verify"
+  },
+  "rule": {
+    "accept": "Click \"Next\", I accept the ",
+    "terms_conditions": "Terms and Conditions",
+    "and": " & ",
+    "privacy_policy": "Privacy Policy",
+    "end": "."
+  },
+  "terms_conditions": {
+    "title": "Terms & Conditions",
+    "url": "/hkca-terms-of-use.pdf"
+  },
+  "privacy_policy": {
+    "title": "Privacy Policy",
+    "url": "/hkca-privacy-policy.pdf"
+  },
+  "otp": {
+    "sent_to_mobile": "A message with OTP has been sent to {}.\nPlease enter the code to continue."
+  },
+  "info": {
+    "note": "Please input your information to verify your identity"
+  },
+  "tab": {
+    "redemption": "Redemption",
+    "contact": "Contact",
+    "scan": "Scan",
+    "home": "Home",
+    "activity": "Events",
+    "profile": "Me"
+  },
+  "title": {
+    "redemption": "Gift Redemption",
+    "contact": "Contact",
+    "home": "Home",
+    "activity": "Events",
+    "profile": "Me",
+    "qrcode": "QRCode",
+    "settings": "Settings",
+    "asset_wallet": "My Asset",
+    "my_level": "My Level",
+    "my_activity": "My ESG Activity",
+    "redemption_history": "Redemption History",
+    "transaction_history": "Transaction History"
+  },
+  "subtitle": {
+    "more": "More"
+  },
+  "scan": {
+    "title": "Scan",
+    "subtitle": "Scan the QR code to get rewards"
+  },
+  "transaction": {
+    "title": "Transaction History",
+    "subtitle": "See transaction history"
+  },
+  "settings": {
+    "section": {
+      "general": "General",
+      "information": "Information"
+    },
+    "tile": {
+      "language": "Language",
+      "mode": "Dark Mode",
+      "terms_conditions": {
+        "title": "Terms & Conditions",
+        "url": "/hkca-terms-of-use.pdf"
       },
-      "id": {
-        "title": "Staff ID",
-        "hint": "Staff ID"
+      "privacy_policy": {
+        "title": "Privacy Policy",
+        "url": "/hkca-privacy-policy.pdf"
       },
-      "name": {
-        "title": "Staff Name",
-        "hint": "Staff Name"
+      "faq": {
+        "title": "FAQ",
+        "url": "/hkca-about-qa.pdf"
       }
     },
-    "login": {
-      "note": "Please enter your mobile number\nthen we will send OTP to verify"
-    },
-    "rule": {
-      "accept": "Click \"Next\", I accept the ",
-      "terms_conditions": "Terms and Conditions",
-      "and": " & ",
-      "privacy_policy": "Privacy Policy",
-      "end": "."
-    },
-    "terms_conditions": {
-      "title": "Terms & Conditions",
-      "url": "/hkca-terms-of-use.pdf"
-    },
-    "privacy_policy": {
-      "title": "Privacy Policy",
-      "url": "/hkca-privacy-policy.pdf"
-    },
-    "otp": {
-      "sent_to_mobile": "A message with OTP has been sent to {}.\nPlease enter the code to continue."
-    },
-    "info": {
-      "note": "Please input your information to verify your identity"
-    },
-    "tab": {
-      "redemption": "Redemption",
-      "contact": "Contact",
-      "scan": "Scan",
-      "home": "Home",
-      "activity": "Events",
-      "profile": "Me"
-    },
-    "title": {
-      "redemption": "Gift Redemption",
-      "contact": "Contact",
-      "home": "Home",
-      "activity": "Events",
-      "profile": "Me",
-      "qrcode": "QRCode",
-      "settings": "Settings",
-      "asset_wallet": "My Asset",
-      "my_level": "My Level",
-      "my_activity": "My ESG Activity",
-      "redemption_history": "Redemption History",
-      "transaction_history": "Transaction History"
-    },
-    "subtitle": {
-      "more": "More"
-    },
-    "scan": {
-      "title": "Scan",
-      "subtitle": "Scan the QR code to get rewards"
-    },
-    "transaction": {
-      "title": "Transaction History",
-      "subtitle": "See transaction history"
-    },
-    "settings": {
-      "section": {
-        "general": "General",
-        "information": "Information"
-      },
-      "tile": {
-        "language": "Language",
-        "mode": "Dark Mode",
-        "terms_conditions": {
-          "title": "Terms & Conditions",
-          "url": "/hkca-terms-of-use.pdf"
-        },
-        "privacy_policy": {
-          "title": "Privacy Policy",
-          "url": "/hkca-privacy-policy.pdf"
-        },
-        "faq": {
-          "title": "FAQ",
-          "url": "/hkca-about-qa.pdf"
-        }
-      },
-      "version": "Version"
-    },
-    "permission": {
-      "camera": {
-        "title": "Camera Permission",
-        "content": "Camera permission is required to scan QR code. You can grant in app settings."
-      }
-    },
-    "event": {
-      "start_date": "Start Date",
-      "end_date": "End Date"
-    },
-    "prize": {
-      "points": "{} Coins"
+    "version": "Version"
+  },
+  "permission": {
+    "camera": {
+      "title": "Camera Permission",
+      "content": "Camera permission is required to scan QR code. You can grant in app settings."
+    }
+  },
+  "event": {
+    "start_date": "Start Date",
+    "end_date": "End Date"
+  },
+  "prize": {
+    "points": "{} Coins",
+    "sold_out": "Out of Stock"
+  },
+  "redeem": {
+    "points": "{} Coins"
+  },
+  "transactions": {
+    "points": "{} Coins"
+  },
+  "profile": {
+    "points": "{} Coins"
+  },
+  "dialog": {
+    "check_in": {
+      "title": "Check in successfully",
+      "content": "Got {} coins from \"{}\""
     },
     "redeem": {
-      "points": "{} Coins"
+      "title": "Redeem successfully",
+      "content": "Used {} coins to redeem \"{}\""
     },
-    "transactions": {
-      "points": "{} Coins"
-    },
-    "profile": {
-      "points": "{} Coins",
-      "edit_name": "Edit Name"
-    },
-    "dialog": {
-      "check_in": {
-        "title": "Check in successfully",
-        "content": "Got {} coins from \"{}\""
-      },
-      "redeem": {
-        "title": "Redeem successfully",
-        "content": "Used {} coins to redeem \"{}\""
-      },
-      "prize": {
-        "title": "Redeem gift",
-        "content": "Confirm to use {} coins to redeem \"{}\"？"
-      }
-    },
-    "logout": {
-      "title": "Logout",
-      "content": "Are you sure to sign out now?"
-    },
-    "exit": "Press again to exit",
-    "error": {
-      "title": "Error",
-      "network": "Network Error",
-      "invalid_qrocde": "Invalid Qrcode",
-      "1003": "Failed to redeem prize!",
-      "1004": "Insufficient points to redeem!",
-      "1005": "This prize does not belong to your organization!",
-      "1020": "The prize redemption has expired!",
-      "1021": "The prize was out of stock!",
-      "1022": "The prize was not started for redeem!",
-      "1023": "The prize was suspended for redeem!",
-      "1033": "Failed to scan event!",
-      "1034": "This event does not belong to your organization!",
-      "1040": "The event was closed!",
-      "1051": "The event was not started yet!",
-      "1052": "The event was reached total check-in limit!",
-      "1053": "You have reached the daily check-in limit!",
-      "1054": "This event allow check-in 1 time only! No more check-ins are accepted!"
+    "prize": {
+      "title": "Redeem gift",
+      "content": "Confirm to use {} coins to redeem \"{}\"？"
     }
+  },
+  "logout": {
+    "title": "Logout",
+    "content": "Are you sure to sign out now?"
+  },
+  "exit": "Press again to exit",
+  "error": {
+    "title": "Error",
+    "network": "Network Error",
+    "invalid_qrocde": "Invalid Qrcode",
+    "1003": "Failed to redeem prize!",
+    "1004": "Insufficient points to redeem!",
+    "1005": "This prize does not belong to your organization!",
+    "1020": "The prize redemption has expired!",
+    "1021": "The prize was out of stock!",
+    "1022": "The prize was not started for redeem!",
+    "1023": "The prize was suspended for redeem!",
+    "1033": "Failed to scan event!",
+    "1034": "This event does not belong to your organization!",
+    "1040": "The event was closed!",
+    "1051": "The event was not started yet!",
+    "1052": "The event was reached total check-in limit!",
+    "1053": "You have reached the daily check-in limit!",
+    "1054": "This event allow check-in 1 time only! No more check-ins are accepted!",
+    "1055": " You have to wait {} hour(s) for next check-in!"
   }
-  
+}
