--- a/assets/translations/zh_HK.json
+++ b/assets/translations/zh_HK.json
@@ -143,7 +143,7 @@
     "points": "{}金幣"
   },
   "profile": {
-    "points": "{}金幣"
+    "points": "X{}"
   },
   "dialog": {
     "check_in": {
@@ -167,10 +167,11 @@
   "error": {
     "title": "錯誤",
     "network": "網絡錯誤",
-    "invalid_qrocde": "無效的二維碼",
+    "invalid_qrcode": "無效的二維碼",
     "1003": "兌換禮品失敗！",
     "1004": "不夠金幣兌換！",
     "1005": "此二維碼不是你所屬的機構發出！",
+    "1006": "該禮品只可兌換一次！",
     "1020": "該禮品已過兌換期！",
     "1021": "該禮品已沒有存貨！",
     "1022": "該禮品未可開始兌換！",
