--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -142,7 +142,7 @@
     "points": "X{}"
   },
   "lucky_draw": {
-    "ticket_no": "Your ticket No.:{}"
+    "ticket_no": "Your ticket No.:"
   },
   "dialog": {
     "check_in": {
