--- a/assets/translations/zh_HK.json
+++ b/assets/translations/zh_HK.json
@@ -146,7 +146,7 @@
     "points": "X{}"
   },
   "lucky_draw": {
-    "ticket_no": "奬券編號：{}"
+    "ticket_no": "奬券編號："
   },
   "dialog": {
     "check_in": {
